Fix JSON response for paste creation